@@ -13,8 +13,15 @@ use constant NOFALLTHRU  =>  2;
 
 sub get_interrupts;
 sub show_comm_stats;
-my $bindir  = "/usr/local/bin";
-my $procdir = "/proc/driver/domhub";
+my $bindir   = "/usr/local/bin";
+my $procdir  = "/proc/driver/domhub";
+my $echotest = "/usr/local/share/domhub-testing/echo-test";
+my $echoloop = "/usr/local/bin/echo-loop";
+die "$0: echo test program $echotest not installed, need domhub-tools RPM.\n"
+    unless -x $echotest;
+die "$0: echo loop program $echoloop not found!\n" unless -x $echoloop;
+
+select STDOUT; $|=1;
 
 my $nmsgs         = 400000000;
 my $ntcals        = 400000000;
@@ -37,6 +44,7 @@ my $require_kbmin = 40; # Require this many kB/sec during readwrite
 my $checkgps      = 0;
 my $gpsskip       = 15;
 my $gpsticks      = 20000000;
+my $useReadwrite  = 0;
 my $loopback;
 sub usage { return <<EOF;
 
@@ -55,6 +63,7 @@ Usage: $0 [st.in]
 	  [-v|-savetcal]       Save time calibration data for each channel
 	  [-f|-fixsinglepkt <n>] Fix first single pkt length to <n> bytes
 	  [-i|-skipkbcheck]    Allow slow connection / skip bandwidth min. check
+	  [-w]                 Use readwrite instead of default [echo-test]
 	  [-o|-loopback]       Tweaks to support loopback mode firmware:
 	                         - don't wait for ">" from iceboot
                                  - don't softboot DOMs
@@ -95,6 +104,7 @@ GetOptions("help|h"          => \$help,
 	   "fixsinglepkt|f=i"=> \$fixsinglepkt,
 	   "probe|p"         => \$probe,
 	   "savetcal|v"      => \$savetcal,
+	   "w"               => \$useReadwrite,
 	   "useconfigboot|b" => \$useconfigboot,
 	   "skipkbcheck|i"   => \$skipkbchk,
 	   "loopback|o"      => \$loopback,
@@ -274,17 +284,32 @@ for($i=0; $i<$ndoms; $i++) {
 dochoice("[e]cho-test individual channels (1 msg)", 'e', FALLTHRU_OK, sub {
     for($i=0; $i<$ndoms; $i++) {
 	# print `cat /proc/driver/domhub/card$card{$i}/pair$pair{$i}/dom$dom{$i}/comstat`;
-	my $echocmd = "$bindir/readwrite HUB $fixsinglepktarg $devfiles{$i} 1 2>&1";
-	print "$echocmd\n";
-	my $echoresult = `$echocmd`;
-	if($echoresult =~ /Closing file.\nDone.$/m) {
-	    print "$devfiles{$i} passes single-message echo test.\n\n";
+	if($useReadwrite) {
+	    my $echocmd = "$bindir/readwrite HUB $fixsinglepktarg $devfiles{$i} 1 2>&1";
+	    print "$echocmd\n";
+	    my $echoresult = `$echocmd`; 
+	    if($echoresult =~ /Closing file.\nDone.$/m) {
+		print "$devfiles{$i} passes single-message echo test.\n\n";
+	    } else {
+		print "$devfiles{$i} failed single-message echo test:\n$echoresult\n";
+		print "comstat: \n";
+		print `cat /proc/driver/domhub/card$card{$i}/pair$pair{$i}/dom$dom{$i}/comstat`;
+		die "$devfiles{$i} failed single-message echo test.\n";
+	    }	
 	} else {
-	    print "$devfiles{$i} failed single-message echo test:\n$echoresult\n";
-	    print "comstat: \n";
-	    print `cat /proc/driver/domhub/card$card{$i}/pair$pair{$i}/dom$dom{$i}/comstat`;
-	    die "$devfiles{$i} failed single-message echo test.\n";
-	}	
+	    my $echocmd = "$echotest -n 1 $card{$i}$pair{$i}$dom{$i} 2>&1";
+	    print "$echocmd\n";
+	    my $echoresult = `$echocmd`; chomp $echoresult;
+	    # 00A 5852 0.067855 0
+	    if($echoresult =~ /$card{$i}$pair{$i}$dom{$i}\s+\d+\s+\S+\s+\d+/) {
+		print "$devfiles{$i} passes single-message echo test ($echoresult).\n\n";
+	    } else {
+		print "$devfiles{$i} failed single-message echo test:\n$echoresult\n";
+                print "comstat: \n";
+                print `cat /proc/driver/domhub/card$card{$i}/pair$pair{$i}/dom$dom{$i}/comstat`;
+                die "$devfiles{$i} failed single-message echo test.\n";
+	    }
+	}
     }
 });
 
@@ -302,6 +327,7 @@ dochoice("Do single [t]ime calib on each channel", 't', FALLTHRU_OK, sub {
 my $longjobs = 0;
 my $ifgps = $testgps? "/GPS readout" : "";
 dochoice("Start [l]ong-term echo/tcalib$ifgps tests", 'l', FALLTHRU_OK, sub {
+    my @domlist;
     for($i=0; $i<$ndoms; $i++) {
 	my $echoout = "echo_results_c$card{$i}"."w$pair{$i}"."d$dom{$i}.out";
 	my $tcalout;
@@ -312,20 +338,31 @@ dochoice("Start [l]ong-term echo/tcalib$ifgps tests", 'l', FALLTHRU_OK, sub {
 	} else {
 	    $tcaldata = "/dev/null";
 	}
-	my $rwcmd = "$bindir/readwrite HUB $kbchkarg $devfiles{$i} ".($stuffmode?"-s":"").
-	    " $nmsgs >& $echoout &";
-	my $tccmd = "$bindir/tcaltest  -d $dorfreq  $tprocfiles{$i} $ntcals "
-	    .($savetcal?"":"noshow")." 2>$tcalout 1>$tcaldata &";
-	if($nmsgs > 0) {
+
+	if($useReadwrite && $nmsgs > 0) { # Single process for each DOM
+	    my $rwcmd = "$bindir/readwrite HUB $kbchkarg $devfiles{$i} ".($stuffmode?"-s":"")
+		.       " $nmsgs >& $echoout &";
 	    print "Running $rwcmd...\n";
 	    system $rwcmd;
-
 	}
+
+	my $tccmd = "$bindir/tcaltest  -d $dorfreq  $tprocfiles{$i} $ntcals "
+	    .($savetcal?"":"noshow")." 2>$tcalout 1>$tcaldata &";
 	if($ntcals > 0 && ! $skiptcal) {
 	    print "Running $tccmd...\n";
 	    system $tccmd;
 	}
+	
+	push @domlist, "$card{$i}$pair{$i}$dom{$i}";
     }
+
+    if(! $useReadwrite && $nmsgs > 0) { # Single process for all DOMs
+	my $domsarg = join " ", @domlist;
+	my $echocmd = "$echoloop -n $nmsgs $domsarg >& echo_results_all.out &";
+	print "Running $echocmd...\n";
+	system $echocmd;
+    }
+
     if($testgps) {
 	my @pfs = </proc/driver/domhub/card*/syncgps>;
 	for(@pfs) {
@@ -339,54 +376,6 @@ dochoice("Start [l]ong-term echo/tcalib$ifgps tests", 'l', FALLTHRU_OK, sub {
     }
     $longjobs = 1;
 });
-
-sub get_interrupts {
-
-#            CPU0       CPU1
-#   0:   43128503   43074691    IO-APIC-edge  timer
-#   1:          1          2    IO-APIC-edge  keyboard
-#   2:          0          0          XT-PIC  cascade
-#   8:          1          0    IO-APIC-edge  rtc
-#   9:          2          0   IO-APIC-level  ohci1394
-#  11:   13450700   13520695   IO-APIC-level  dpti0, eth0
-#  14:          0          2    IO-APIC-edge  ide0
-
-    my @dhlines = `cat /proc/interrupts`;
-    my $sumint = 0;
-    for(@dhlines) {
-	chomp;
-	if(/^\s*\d+:\s+(\d+)/) {    # Find good lines
-	    # print;
-	    s/^\s+\d+:\s+//;        # strip off leading whitespace & IRQ
-	    my @toks = split /\s+/;
-	    # Sum interrupts for all CPUs 
-	    # until non-decimal-number token (interrupt type)
-	    my $thissum = 0;
-	    my $tok;
-	    while($tok = shift @toks) {
-		if($tok =~ /^\d+$/) { 
-		    $thissum += $tok;
-		} else {
-		    last;
-		}
-	    }
-	    # print "... sum $thissum: ";
-	    # Find devices, look for dh
-	    my $isdriver = 0;
-	    while($tok = shift @toks) {
-		# print "[$tok]";
-		if($tok =~ /^dh,?$/) {
-		    $isdriver = 1;
-		    $sumint += $thissum;
-		}
-	    }
-	    # print $isdriver? "DRIVER" : "not driver";
-	    # print "\n";
-	}
-    }
-    warn "No interrupts found for DOR-driver!\n" unless $sumint;
-    return $sumint;
-}
 
 if($timedrun) {
     my $now = time;
@@ -427,6 +416,54 @@ exit;
 
 #### END OF MAIN
 
+sub get_interrupts {
+
+#            CPU0       CPU1
+#   0:   43128503   43074691    IO-APIC-edge  timer
+#   1:          1          2    IO-APIC-edge  keyboard
+#   2:          0          0          XT-PIC  cascade
+#   8:          1          0    IO-APIC-edge  rtc
+#   9:          2          0   IO-APIC-level  ohci1394
+#  11:   13450700   13520695   IO-APIC-level  dpti0, eth0
+#  14:          0          2    IO-APIC-edge  ide0
+    while(1) {
+	my @dhlines = `cat /proc/interrupts`;
+	my $sumint = 0;
+	for(@dhlines) {
+	    chomp;
+	    if(/^\s*\d+:\s+(\d+)/) {    # Find good lines
+		# print;
+		s/^\s+\d+:\s+//;        # strip off leading whitespace & IRQ
+		my @toks = split /\s+/;
+		# Sum interrupts for all CPUs 
+		# until non-decimal-number token (interrupt type)
+		my $thissum = 0;
+		my $tok;
+		while($tok = shift @toks) {
+		    if($tok =~ /^\d+$/) { 
+			$thissum += $tok;
+		    } else {
+			last;
+		    }
+		}
+		# print "... sum $thissum: ";
+		# Find devices, look for dh
+		my $isdriver = 0;
+		while($tok = shift @toks) {
+		    # print "[$tok]";
+		    if($tok =~ /^dh,?$/) {
+			$isdriver = 1;
+			$sumint += $thissum;
+		    }
+		}
+		# print $isdriver? "DRIVER" : "not driver";
+		# print "\n";
+	    }
+	}
+	return $sumint if $sumint; # Otherwise, go back and wait for dh interrupts
+    }
+}
+
 
 sub moni {
     while(1) {
@@ -435,12 +472,12 @@ sub moni {
 }
 
 sub check_for_running_processes {
-# Check for readwrite or tcaltest
+# Check for readwrite, echo-test, or tcaltest
     while(1) {
 	my @ps = `ps --columns 1000 ax`;
 	my $foundAlien = 0;
 	for(@ps) {
-	    if ((/readwrite HUB/ || (! $skiptcal && /tcaltest/)) && !/emacs/) {
+	    if ((/readwrite HUB/ || /echo-test/ || (! $skiptcal && /tcaltest/)) && !/emacs/) {
 		print STDERR "$_";
 		$foundAlien++;
 	    }
@@ -468,7 +505,7 @@ sub killall {
 	my $hadone = 0;
 	my @ps = `ps --columns 1000 ax`;
 	for(@ps) {
-	    if(m|/usr/local/bin/$argname|) {
+	    if(m|/usr/local/bin/$argname| || m|/usr/local/share/domhub-testing/$argname|) {
 		$hadone++;
 		my $pid = (split " ")[0];
 		my $killed = kill ('TERM', $pid);
@@ -488,6 +525,8 @@ sub killall {
 
 sub kill_running_processes {
     killall "readwrite";
+    killall "echo-loop";
+    killall "echo-test";
     killall "tcaltest" unless $skiptcal;
     killall "readgps";
 }
@@ -521,6 +560,7 @@ sub check_doms_comms_status {
 	my $isresp = `cat $procdir/card$card{$_}/pair$pair{$_}/dom$dom{$_}/is-communicating`;
 	print $isresp;
 	if($isresp !~ /is communicating/) {
+	    print "ERROR: expected communicating DOM at $card{$_}$pair{$_}$dom{$_}!\n";
 	    $ok = 0;
 	}
     }
@@ -633,7 +673,7 @@ sub check_card_procs {
     for(keys %dom) {
 	my $cardproc = "$procdir/card$card{$_}";
 	if(! -e $cardproc) {
-	    print "Proc file $cardproc missing, probably not installed.\n";
+	    print "Proc file $cardproc missing, probably card not installed?\n";
 	    print "Check input file \"$inputfile\".\n";
 	    exit;
 	}
@@ -760,20 +800,29 @@ sub check_log_files {
 		print "$card{$i} $pair{$i} $dom{$i}: Good ID ($id).\n";
 	    } else {
 		print "Failed to get DOM ID for $card{$i} $pair{$i} $dom{$i}.\n";
-		print "stagedtests FAILURE.\n";
 		$retval = 1;		    
 	    }
 	}
     }
     if($nmsgs > 0) {
-	for($i=0; $i<$ndoms; $i++) {
-	    my $echoout = "echo_results_c$card{$i}"."w$pair{$i}"."d$dom{$i}.out";
-	    my $tail = `tail -1 $echoout`;
-	    print $tail;
+	if($useReadwrite) {
+	    for($i=0; $i<$ndoms; $i++) {
+		my $echoout = "echo_results_c$card{$i}"."w$pair{$i}"."d$dom{$i}.out";
+		my $tail = `tail -1 $echoout`;
+		print $tail;
 # /dev/dhc0w0dA: 1000 msgs (last 188B, 1.19 MB tot, 27.11 sec, 45.86 kB/sec, ARR=0)
-	    if($tail !~ m|/dev/dhc\d+w\d+d\S: \d+ msgs \(last|) {
-		print "stagedtests FAILURE.\n";
-		$retval = 1;
+		if($tail !~ m|/dev/dhc\d+w\d+d\S: \d+ msgs \(last|) {
+		    $retval = 1;
+		}
+	    }
+	} else {
+	    my @lines = `cat echo_results_all.out`;
+	    for(@lines) {
+		print;
+		# 10 msgs:
+		if(! /^\d\d\S\s+\d+\s+\S+\s+\d+$/ && ! /^\d+ msgs:$/) {
+                    $retval = 1;
+		}
 	    }
 	}
     }
@@ -784,7 +833,6 @@ sub check_log_files {
 	    print $tail;
 # /proc/driver/domhub/card0/pair0/domB/tcalib: 2380 tcals, 0 rdtimeouts, 0 wrtimeouts.
 	    if($tail !~ m|/proc/driver/domhub/card\d+/pair\d+/dom\S/tcalib: \d+ tcals|) {
-		print "stagedtests FAILURE.\n";
 		$retval = 1;
 	    }
 	}
@@ -798,12 +846,11 @@ sub check_log_files {
 # GPS 320:19:31:11 TQUAL(' ' exclnt.,<1us) DOR 0000000056bd138c
 	    if($data !~ /GPS.+?TQUAL.+?DOR/ || $data =~ /fail/i) {
 		print "$outfile: $data\n";
-		print "stagedtests FAILURE.\n";
-		return 1;
+		$retval = 1;
 	    }
 	}
     }
-
+    print "stagedtests FAILURE.\n" if $retval;
     return $retval;
 }
 
